[package]
name = "lux-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bevy = "0.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[build-dependencies]
serde_json = "1"
