[package]
name = "lux-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
	"bevy_asset",
	"bevy_log",
	"bevy_state",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"default_font",
	"bevy_picking",
	"webgl2",
	"png",
	"x11",
	"wayland",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[build-dependencies]
serde_json = "1"
